# LearningML

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-22-ml-curriculum-design.md  2026-03-22-phase-1a-scientific-python.md  2026-03-22-spiral-2-full.md  2026-03-22-spiral-3-full.md
spiral_1/1a_scientific_python/: README.md
spiral_1/1a_scientific_python/01_python_idioms/: README.md  exercises.py
spiral_1/1a_scientific_python/02_numpy_fundamentals/: README.md  exercises.py  mini_project.py
spiral_1/1a_scientific_python/03_pandas_wrangling/: README.md  exercises.py  mini_project.py
spiral_1/1a_scientific_python/04_visualization/: README.md  exercises.py
spiral_1/1a_scientific_python/05_capstone_eda/: README.md  utils.py
spiral_1/1b_classical_ml/: README.md
spiral_1/1b_classical_ml/01_ml_workflow/: README.md  exercises.py
spiral_1/1b_classical_ml/02_linear_regression/: README.md  exercises.py  mini_project.py
spiral_1/1b_classical_ml/03_logistic_regression/: README.md  exercises.py
spiral_1/1b_classical_ml/04_decision_trees_and_ensembles/: README.md  (+2 more)
spiral_1/1c_neural_networks/: README.md
spiral_1/1d_math_refresher/: README.md
spiral_2/2a_math_foundations/: README.md
spiral_2/2b_classical_ml_theory/: README.md
spiral_2/2c_deep_learning_theory/: README.md
spiral_2/2d_ml_engineering/: README.md
spiral_3/: README.md
spiral_3/3a_advanced_deep_learning/: README.md
spiral_3/3b_nlp_language_models/: README.md
spiral_3/3c_advanced_math/: README.md
spiral_3/3d_specialization/: README.md
spiral_3/3e_paper_reproduction/: README.md
(+402 files in other folders)
